--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1",
     "sass": "^1.77.6"
   },
   "devDependencies": {
